# tooly

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py  tooly.py
.github/workflows/: publish.yaml
